# restaurant-recommendation

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt  streamlit_app.py
docs/: AI_Overview.md  Implementation.md  architecture.md  decisions.md  deployment.md  edgecases.md  eval.md  problemStatement.md
docs/github/: commands.md
src/zomato_ai/: __init__.py
src/zomato_ai/api/: app.py
src/zomato_ai/config/: __init__.py  logging.py  settings.py
src/zomato_ai/data_ingestion/: __init__.py  cache.py  loader.py  normalizer.py
src/zomato_ai/domain/: __init__.py  preferences.py  recommendation.py  restaurant.py
src/zomato_ai/llm/: __init__.py  adapter.py  output_validator.py  prompt_builder.py
src/zomato_ai/orchestration/: __init__.py  recommendation_service.py
src/zomato_ai/presentation/: __init__.py  cli.py
src/zomato_ai/retrieval/: __init__.py  index.py  retriever.py
tests/: test_api_app.py  test_cache.py  test_llm_output_validator.py  test_llm_prompt_builder.py  test_normalizer.py  test_preferences.py  test_recommendation_service.py  test_retriever.py  test_settings.py
