[project]
name = "zomato-ai-recommendations"
version = "0.1.0"
description = "AI-assisted restaurant discovery using deterministic filtering and grounded LLM ranking."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "typer>=0.12.0",
  "pydantic>=2.8.0",
  "datasets>=2.20.0",
  "pandas>=2.2.0",
  "pyarrow>=16.0.0",
  "httpx>=0.27.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2.0",
  "ruff>=0.5.0"
]

[project.scripts]
zomato-ai = "zomato_ai.presentation.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

